cabal-version:       2.2
name:                sr-guid
version:             0.1.1
synopsis:            Browser GUID interface GHCJS
homepage:            github.com/seereason/sr-guid
license:             BSD-3-Clause
author:              Clifford Beshers
maintainer:          Clifford Beshers <beshers@seereason.com>
category:            Web

flag Debug
     Description: Enable debug output
     Default: False
     Manual: True

library
     Buildable: True
     hs-source-dirs:      src
     default-language:    Haskell2010
     Default-Extensions:  CPP
     exposed-modules:     SeeReason.GUID
     ghcjs-options:       -Wincomplete-patterns
     if flag(Debug)
       cpp-options: "-DDEBUG_CLIENT"
     build-depends:
       base >=4.8 && <5,
       cereal,
       errors,
       exceptions,
       mtl,
       safecopy,
       snowflake

test-suite ghc
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  Buildable: True
  hs-source-dirs:      tests
  main-is:             Test.hs
  build-depends:       base, sr-guid

